# udacity_cpp_nanodegree_capstone_myCQ

./: .gitignore  CMakeLists.txt  README.md
include/custom_net_lib/: common_net_includes.hpp  custom_net_lib.hpp  net_client.hpp  net_connection_interface.hpp  net_message.hpp  net_server.hpp  net_ts_queue.hpp
src/: main_client.cpp  main_server.cpp  myCQ_client.cpp  myCQ_client.hpp  myCQ_server.cpp  myCQ_server.hpp  payload_definitions.hpp
tests/: CMakeLists.txt  test_msg_serialization.cpp
